--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -3,11 +3,11 @@
   become: True
   tasks:
     - name: Install python pip
-      yum:
+      apt:
         name: python-pip
         state: present
     - name: Install docker
-      yum:
+      apt:
         name: docker
         state: present
     - name: start docker
@@ -16,7 +16,7 @@
         state: started
         enabled: yes
     - name: Install docker-py python module
-      pip:
+      apt:
         name: docker-py
         state: present
     - name: Start the container
