--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -2,9 +2,9 @@
 - hosts: dev
   become: True
   tasks:
-    - name: Install python pip
+    - name: Install python3
       apt:
-        name: python-pip
+        name: python3
         state: present
     - name: Install docker
       apt:
