--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -15,6 +15,10 @@
         name: docker
         state: started
         enabled: yes
+    - name: Install docker-py python module
+      pip:
+        name: docker-py
+        state: present
     - name: Start the container
       docker_container:
         name: webapp
